Add a wrapper method for jvmOptions from build.properties